chore(label): checkin

--- a/src/patternfly/components/Label/label--colors.hbs
+++ b/src/patternfly/components/Label/label--colors.hbs
@@ -71,32 +71,32 @@
 {{> label--variants
     label--variants--title="Success"
     label--variants--id=(concat "success-" label--colors--id)
-    label--color="success"}}
+    label--status="success"}}
 
 <br><br>
 
 {{> label--variants
     label--variants--title="Warning"
     label--variants--id=(concat "warning-" label--colors--id)
-    label--color="warning"}}
+    label--status="warning"}}
 
 <br><br>
 
 {{> label--variants
     label--variants--title="Danger"
     label--variants--id=(concat "danger-" label--colors--id)
-    label--color="danger"}}
+    label--status="danger"}}
 
 <br><br>
 
 {{> label--variants
     label--variants--title="Info"
     label--variants--id=(concat "info-" label--colors--id)
-    label--color="info"}}
+    label--status="info"}}
 
 <br><br>
 
 {{> label--variants
     label--variants--title="Custom"
     label--variants--id=(concat "custom-" label--colors--id)
-    label--color="custom"}}
+    label--status="custom"}}
