feat(ProgressStepper): apply tokens

--- a/src/patternfly/components/ProgressStepper/progress-stepper-step.hbs
+++ b/src/patternfly/components/ProgressStepper/progress-stepper-step.hbs
@@ -4,7 +4,7 @@
 {{~#if progress-stepper-step--IsComplete}} pf-m-success{{/if}}
 {{~#if progress-stepper-step--IsIssue}} pf-m-warning{{/if}}
 {{~#if progress-stepper-step--IsFailure}} pf-m-danger{{/if}}
-{{~#if progress-stepper-step--IsInProgress}} pf-m-info{{/if}}
+{{~#if progress-stepper-step--IsInProgressAlt}} pf-m-in-progress-alt{{/if}}
 {{~#if progress-stepper-step--IsPending}} pf-m-pending{{/if}}
 {{~#if progress-stepper-step--IsPendingAlt}} pf-m-pending{{/if}}"
 role="listitem"
