chore(menu): @lboehling updates!

--- a/src/patternfly/components/Menu/menu-item-action.hbs
+++ b/src/patternfly/components/Menu/menu-item-action.hbs
@@ -1,7 +1,7 @@
 <div class="{{pfv}}menu__item-action
   {{setModifiers
     menu-item-action--IsFavorite='pf-m-favorite'
-    menu-item-action--IsFavorited='pf-m-favorited'
+    menu-item-action--IsFavorited='pf-m-favorited pf-m-favorite'
     menu-list-item--IsAriaDisabled='pf-m-aria-disabled'
     menu-item-action--modifier=menu-item-action--modifier
   }}"
