--- a/src/patternfly/components/Menu/menu-item.hbs
+++ b/src/patternfly/components/Menu/menu-item.hbs
@@ -16,6 +16,7 @@
       type="button"
       {{#if menu-list-item--IsDisabled}}
         disabled
+        tabindex="-1"
       {{else if menu-list-item--IsAriaDisabled}}
         aria-disabled="true"
       {{/if}}
