--- a/src/patternfly/components/Menu/menu-list-item.hbs
+++ b/src/patternfly/components/Menu/menu-list-item.hbs
@@ -14,7 +14,7 @@
   {{#if menu-list-item--IsCheckbox}}
     role="menuitem"
   {{else}}
-    role="{{ternary menu-list-item--role menu-list-item--role "group"}}"
+    role="{{ternary menu-list-item--IsGroup 'group' 'none'}}"
   {{/if}}
   {{#if menu-list-item--attribute}}
     {{{menu-list-item--attribute}}}
