--- a/src/patternfly/components/Wizard/wizard-nav-link.hbs
+++ b/src/patternfly/components/Wizard/wizard-nav-link.hbs
@@ -1,4 +1,4 @@
-<{{#if wizard-nav-link--IsLink}}a href="#"{{else}}button{{/if}} class="{{pfv}}wizard__nav-link
+<{{#if wizard-nav-link--IsLink}}a href="#"{{else}}button{{/if}} class="{{pfv}}wizard__nav-link {{pfv}}button pf-m-link
   {{~#if wizard-nav-link--IsCurrent}}
     pf-m-current
   {{/if}}
